--- a/BusSeatsCollectionView/Seats.xib
+++ b/BusSeatsCollectionView/Seats.xib
@@ -1,21 +1,55 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="Seats" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SeatCell" id="gTV-IL-0wX" customClass="Seats" customModule="BusSeatsCollectionView" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="50" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="50" height="70"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f2K-X4-6Db">
+                        <rect key="frame" x="5" y="5" width="40" height="40"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="0vd-BR-Qry"/>
+                            <constraint firstAttribute="width" constant="40" id="5RS-Pq-Sit"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t1K-Vr-8WI">
+                        <rect key="frame" x="6" y="50" width="38" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="bnL-Lv-uU1"/>
+                            <constraint firstAttribute="width" constant="38" id="tgc-hJ-tRG"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                        <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="t1K-Vr-8WI" secondAttribute="trailing" constant="6" id="1KJ-iG-3y6"/>
+                <constraint firstItem="f2K-X4-6Db" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="Cta-Cd-wUb"/>
+                <constraint firstAttribute="trailing" secondItem="f2K-X4-6Db" secondAttribute="trailing" constant="5" id="EYu-Xu-obj"/>
+                <constraint firstItem="f2K-X4-6Db" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="OFV-zd-WS9"/>
+                <constraint firstItem="t1K-Vr-8WI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="QGQ-1O-CX7"/>
+                <constraint firstItem="t1K-Vr-8WI" firstAttribute="top" secondItem="f2K-X4-6Db" secondAttribute="bottom" constant="5" id="gYx-sK-gyS"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <connections>
+                <outlet property="seatNo" destination="t1K-Vr-8WI" id="XFj-c2-qXW"/>
+                <outlet property="seatView" destination="f2K-X4-6Db" id="1Vt-Pb-LB2"/>
+            </connections>
+            <point key="canvasLocation" x="-68.115942028985515" y="34.821428571428569"/>
         </collectionViewCell>
     </objects>
 </document>
